2006-09-18  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(findTarget): Correctly translate child coordinates.
	Use Component.eventTypeEnabled() for checking if a component
	has a certain event enabled.
	(handleMouseEvent): Find the correct mouse event target.
 	Use Component.eventTypeEnabled() for checking if a component
	has a certain event enabled.

2006-09-18  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(show): Test for the peer beeing lightweight directly.
	(paintAll): Validate before painting. Don't paint when not
	showing. Call peer.paint() when the component is heavyweight.
	(repaint): Delegate to the parent when lightweight, rather
	than skipping to the nearest heavyweight.
	(createImage): Added null check to prevent NPE.
	(dispatchEvent): Moved old event dispatching and toolkit
	event dispatching to dispatchEventImpl.
	(addComponentListener): Don't enable event. Only add listener
	when not null. Switch to new event dispatching only.
	(addFocusListener): Likewise.
	(addHierarchyListener): Likewise.
	(addHierarchyBoundsListener): Likewise.
	(addKeyListener): Likewise.
	(addMouseListener): Likewise.
	(addMouseMotionListener): Likewise.
	(addMouseWheelListener): Likewise.
	(addInputMethodListener): Likewise.
	(coalesceEvents): For mouse events coalesce them only when
	their modifiers are equal. For paint events coalesce the events
	when one contains the other, without going through complicated
	heuristics.
	(dispatchEventImpl): Moved old event dispatching and toolkit
	event dispatching to dispatchEventImpl.
	(coalescePaintEvents): Removed.
	(HeavyweightInLightweightListener.componentHidden):
	Fixed condition.
	* java/awt/Container.java
	(addImpl): Don't enable events on lightweights.
	(remove): Reordered operations. Don't remove any listeners.
	Throw ArrayIndexOutOfBoundsException when index >= ncomponents.
	Only removeNotify() when peer is != null. Only invalidate if 